updates for intellij 2017.2