@@ -5,9 +5,10 @@
 -Xms2G
 -Xmx4096M
 -Xss2m
--XX:MaxMetaspaceSize=1536m
--XX:ReservedCodeCacheSize=240m
+-XX:MaxMetaspaceSize=2G
+-XX:ReservedCodeCacheSize=1G
 -XX:MetaspaceSize=512m
+-XX:+UseConcMarkSweepGC
 -XX:+DoEscapeAnalysis
 -XX:SoftRefLRUPolicyMSPerMB=50
 -XX:+UnlockExperimentalVMOptions
